# ipywidgets_todo

./: README.md  mkdocs.yml  pyproject.toml
docs/: README.md  components.md  index.md  pages.md  store.md
ipywidgets_todo/: __init__.py
ipywidgets_todo/components/: todo_item.py  todo_list.py
ipywidgets_todo/pages/: __init__.py
ipywidgets_todo/store/: todo_store.py
jupyter_sandbox/: __init__.py
jupyter_sandbox/components/: __init__.py  todo_item.py  todo_list.py
jupyter_sandbox/pages/: todo_app.py
jupyter_sandbox/store/: __init__.py  todo_store.py
notebooks/: todo_app.ipynb
tests/test_components/: conftest.py  test_todo_item.py  test_todo_list.py
tests/test_store/: test_todo_store.py
