[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyter_sandbox"
authors = [{ name = "Yoshimasa Uehara", email = "ysmsuehr@gmail.com" }]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["ipywidgets", "traitlets"]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py310"
src = ["jupyter", "tests"]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ARG002", # unused-method-argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S", "INP001"]
